# What-beats-rock

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
what_beats_rock/: main.py
